Add traverseWith() bridge for parallel effectful optics traversal (#389)
* Add traverseWith() bridge
- Add traverseWith() to FocusPath, AffinePath, and TraversalPath for
  parallel effectful traversal via VTaskPath and StructuredTaskScope